--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tacostagram Final</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <title>Places I've Been</title>
 
     <link rel="stylesheet" href="/stylesheets/application.css">
   </head>
 
   <body>
-    <div>
-      <%= flash["notice"] %>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mb-2 mb-lg-0">
+            <% @user = User.find_by({ "id" => session["user_id"] }) %>
+            <% if @user == nil %>
+              <li class="nav-item"><a href="/users/new" class="nav-link">Sign Up</a></li>
+              <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
+            <% else %>
+              <li class="nav-text">Logged in as: <%= @user["username"] %></li>
+              <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>
+            <% end %>
+            <li class="nav-item"><a href="/places/new/" class="btn btn-success">New Place</a>
+        </li>
+      </ul>
     </div>
-    <div>
-      <a href="/">Home</a>
-      <a href="/logout">Logout</a>
-      <a href="/login">Login</a>
-      <a href="/users/new">Signup</a>
-    </div>
+  </div>
+</nav>
+
 
     <%= yield %>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </body>
 </html>
