--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= csp_meta_tag %>
     <title>Places I've Been</title>
 
+  
     <link rel="stylesheet" href="/stylesheets/application.css">
   </head>
 
@@ -30,6 +31,12 @@
   </div>
 </nav>
 
+  <div class="container mt-3">
+    <% if flash["notice"] != nil %>
+      <div class="alert alert-primary">
+        <%= flash["notice"] %>
+      </div>
+    <% end %>
 
     <%= yield %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
