--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,22 +1,32 @@
 <h1>New Entry</h1>
 
-<form action="/entries" method="post">
-  <input type="hidden" name="place_id" value="<%= params["place_id"] %>">
+<% @user = User.find_by({ "id" => session["user_id"] }) %>
+<% if @user != nil %>
+  <form action="/entries" method="post" enctype="multipart/form-data">
+    <input type="hidden" name="place_id" value="<%= params["place_id"] %>">
 
-  <p>
-    <label for="title_input">Title</label>
-    <input type="text" name="title" id="title_input">
-  </p>
+    <p>
+      <label for="title_input">Title</label>
+      <input type="text" name="title" id="title_input">
+    </p>
 
-  <p>
-    <label for="description_input">Description</label>
-    <input type="text" name="description" id="description_input">
-  </p>
+    <p>
+      <label for="description_input">Description</label>
+      <input type="text" name="description" id="description_input">
+    </p>
 
-  <p>
-    <label for="occurred_on_input">Occurred On</label>
-    <input type="date" name="occurred_on" id="occurred_on_input">
-  </p>
+    <p>
+      <label for="occurred_on_input">Occurred On</label>
+      <input type="date" name="occurred_on" id="occurred_on_input">
+    </p>
 
-  <button>Save</button>
-</form>
+    <div class="mb-3">
+      <label for="uploaded_image_input" class="form-label">Upload Image</label>
+      <input type="file" name="uploaded_image" id="uploaded_image_input" class="form-control">
+    </div>
+
+    <button>Save</button>
+  </form>
+<% else %>
+  You must first <a href="/login">login</a> to post.
+<% end %>
