--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,9 +2,14 @@
 
 <h2>My Entries</h2>
 <% for entry in @entries %>
-  <h3><%= entry["title"] %></h3>
-  <h4><%= entry["occurred_on"] %></h4>
-  <p><%= entry["description"] %></p>
+  <h4><%= entry["title"] %></h4>
+  <h6> <%= entry["occurred_on"] %> </h6>
+  <ul>
+    <li><%= entry["description"] %></li>
+  <% if entry.uploaded_image.attached? %>
+    <img src="<%= url_for(entry.uploaded_image) %>" />
+    </ul>
+  <% end %>
 <% end %>
 
 <p>
