--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,44 +7,41 @@
     <%= csp_meta_tag %>
     <title>Places I've Been</title>
 
-  
     <link rel="stylesheet" href="/stylesheets/application.css">
   </head>
 
+
+
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mb-2 mb-lg-0">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid" id="navbarSupportedContent">
+          <class="nav-item"><a href="/" class="btn btn-link">Home</a></li>
             <% @user = User.find_by({ "id" => session["user_id"] }) %>
             <% if @user == nil %>
-              <li class="nav-item"><a href="/users/new" class="btn btn-success">Sign Up</a></li>
-              <li class="nav-item"><a href="/login" class="btn btn-primary">Login</a></li>
+              <class="nav-item"><a href="/users/new" class="btn btn-link">Sign Up</a> | 
+              <class="nav-item"><a href="/login" class="btn btn-link">Login</a>
             <% else %>
-              <nav class="navbar bg-body-tertiary">
-                <div class="container-fluid">
                   <span class="navbar-text">
                     Logged in as: <%= @user["username"] %>
                   </span>
-                </div>
-              </nav>
-              <li class="nav-item"><a href="/logout" class="btn btn-secondary">Logout</a></li>
+                  <span>
+                  <class="nav-item"><a href="/logout" class="btn btn-link">Logout</a>
+                  </span>
             <% end %>
-            <li class="nav-item"><a href="/places/new/" class="btn btn-info">New Place</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+          </ul>
+        </div>
+      </nav>
 
-  <div class="container mt-3">
-    <% if flash["notice"] != nil %>
-      <div class="alert alert-primary">
-        <%= flash["notice"] %>
-      </div>
-    <% end %>
+    <div class="container mt-3">
+      <% if flash["notice"] != nil %>
+        <div class="alert alert-primary">
+          <%= flash["notice"] %>
+        </div>
+      <% end %>
 
-    <%= yield %>
+      <%= yield %>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
