--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,19 +1,25 @@
 <h1><%= @place["name"] %></h1>
 
 <h2>My Entries</h2>
-<% for entry in @entries %>
-  <h4><%= entry["title"] %></h4>
-  <h6> <%= entry["occurred_on"] %> </h6>
-  <p><%= entry["description"] %> </p>
-  <% if entry.uploaded_image.attached? %>
-    <img src="<%= url_for(entry.uploaded_image) %>" class="img-fluid">
-  <% end %>
-<% end %>
+  <div class="row">
+    <% for entry in @entries %>
+      <div class="col-md-4 mb-4">
+        <h4><%= entry["title"] %></h4>
+        <h6> <%= entry["occurred_on"] %> </h6>
+        <p><%= entry["description"] %> </p>
+        <% if entry.uploaded_image.attached? %>
+          <p><img src="<%= url_for(entry.uploaded_image) %>" class="img-fluid"> </p>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
 
 <p>
-  <a href="/entries/new?place_id=<%= @place["id"] %>">New Entry</a>
+  <p>
+    <a type="nav-item" href="/entries/new?place_id=<%= @place["id"] %>" class="btn btn-primary">New Entry</a>
+  </p>
 </p>
 
-<p>
-  <a href="/places">Back to All Places</a>
+<p> 
+ <a type="nav-item" href="/places/" class="btn btn-outline-info">Back to All Places</a>
 </p>
