--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,28 +10,23 @@
     <link rel="stylesheet" href="/stylesheets/application.css">
   </head>
 
-
-
   <body>
-    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid" id="navbarSupportedContent">
-          <class="nav-item"><a href="/" class="btn btn-link">Home</a></li>
-            <% @user = User.find_by({ "id" => session["user_id"] }) %>
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
+        <a href="/" class="btn btn-link">Home</a>
+          <% @user = User.find_by({ "id" => session["user_id"] }) %>
+          <div class="d-flex ms-auto align-items-center">
             <% if @user == nil %>
-              <class="nav-item"><a href="/users/new" class="btn btn-link">Sign Up</a> | 
-              <class="nav-item"><a href="/login" class="btn btn-link">Login</a>
+                <a href="/users/new" class="btn btn-link me-2">Sign Up</a> | 
+                <a href="/login" class="btn btn-link">Login</a>
             <% else %>
-                  <span class="navbar-text">
-                    Logged in as: <%= @user["username"] %>
-                  </span>
-                  <span>
-                  <class="nav-item"><a href="/logout" class="btn btn-link">Logout</a>
-                  </span>
+                <span class="navbar-text me-3">Logged in as: <%= @user["username"] %></span>
+                <a href="/logout" class="btn btn-link">Logout</a>
             <% end %>
-          </ul>
-        </div>
+          </div>
+        </nav>
       </nav>
+    </div>
 
     <div class="container mt-3">
       <% if flash["notice"] != nil %>
