--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -25,7 +25,7 @@
       <input type="file" name="uploaded_image" id="uploaded_image_input" class="form-control">
     </div>
 
-    <button>Save</button>
+    <button class="btn btn-primary">Save</button> 
   </form>
 <% else %>
   You must first <a href="/login">login</a> to post.
