--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -8,7 +8,7 @@
 
   <div class="row">
     <% for entry in @entries %>
-      <div class="col-md-4 mb-4">
+      <div class="col-12 col-sm-6 col-md-4 mb-4">
         <h4><%= entry["title"] %></h4>
         <h6> <%= entry["occurred_on"] %> </h6>
         <% if entry.uploaded_image.attached? %>
